--- a/.env
+++ b/.env
@@ -4,5 +4,4 @@ TWITTER_SITE="https://nextjs.org/commerce"
 SITE_NAME="Next.js Commerce"
 SHOPIFY_REVALIDATION_SECRET="d43d2e7331b6cdf7700f64ddd8b3edbd"
 SHOPIFY_STOREFRONT_ACCESS_TOKEN="3b52c1ff238232c03e53549578cfd783"
-SHOPIFY_STORE_DOMAIN="https://mitesh-app-testing.myshopify.com"
-
+SHOPIFY_STORE_DOMAIN="mitesh-app-testing-germany.myshopify.com"
